--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "start": "node server/server.js",
-    "test": "mocha server/**/*.test.js",
+    "test": "export NODE_ENV=test || SET \"NODE_ENV=test\" && mocha server/**/*.test.js",
     "test-watch": "nodemon --exec \"npm test\""
   },
   "engines": {
@@ -15,10 +15,14 @@
   "license": "ISC",
   "dependencies": {
     "body-parser": "^1.18.2",
+    "colors": "^1.1.2",
+    "crypto-js": "^3.1.9-1",
     "express": "^4.16.2",
+    "jsonwebtoken": "^8.1.0",
     "lodash": "^4.17.4",
     "mongodb": "^2.2.5",
-    "mongoose": "^4.13.5"
+    "mongoose": "^4.13.5",
+    "validator": "^9.1.2"
   },
   "devDependencies": {
     "expect": "^21.2.1",
